--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,15 @@ readme = "README.md"
 authors = [
 ]
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "absl-py>=2.1.0",
+    "clu>=0.0.12",
+    "jax[cuda12]>=0.4.35",
+    "jupyterlab>=4.3.3",
+    "seaborn>=0.13.2",
+    "tensorflow[and-cuda]>=2.18.0",
+    "tqdm>=4.67.1",
+]
 
 [project.scripts]
 userdiffusion = "userdiffusion:main"
