--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ requires-python = ">=3.10"
 dependencies = [
     "absl-py>=2.1.0",
     "clu>=0.0.12",
-    "jax[cuda12]>=0.4.35",
+    "jax[cuda12-local]>=0.4.35",
     "jupyterlab>=4.3.3",
     "seaborn>=0.13.2",
     "tensorflow[and-cuda]>=2.18.0",
