--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,12 @@ requires-python = ">=3.10"
 dependencies = [
     "absl-py>=2.1.0",
     "clu>=0.0.12",
+    "hydra-core>=1.3.2",
     "jax[cuda12-local]>=0.4.35",
     "jupyterlab>=4.3.3",
+    "pytest>=8.3.4",
     "seaborn>=0.13.2",
+    "sqlalchemy==2.0.36",
     "tensorflow[and-cuda]>=2.18.0",
     "tqdm>=4.67.1",
 ]
