fix unit test comparing new dataset implementation

--- a/conf/dataset/FitzHughNagumo.yaml
+++ b/conf/dataset/FitzHughNagumo.yaml
@@ -3,5 +3,6 @@ defaults:
   - _self_
 
 time_step: 6.
-time_step_count: 667
+time_step_count: 310
+# time_step_count: 667
 time_step_count_drop_first: 250
