--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "hydra-core>=1.3.2",
     "jax[cuda12-local]>=0.4.35",
     "jupyterlab>=4.3.3",
+    "pot>=0.9.5",
     "pytest>=8.3.4",
     "seaborn>=0.13.2",
     "sqlalchemy==2.0.36",
