--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,15 +10,19 @@ requires-python = ">=3.10"
 dependencies = [
     "absl-py>=2.1.0",
     "clu>=0.0.12",
+    "einops>=0.8.0",
     "hydra-core>=1.3.2",
     "jax[cuda12-local]>=0.4.35",
     "jupyterlab>=4.3.3",
+    "lightning==2.5",
+    "numpy==2.0.2",
     "ott-jax>=0.5.0",
     "pot>=0.9.5",
     "pytest>=8.3.4",
     "seaborn>=0.13.2",
     "sqlalchemy==2.0.36",
     "tensorflow[and-cuda]>=2.18.0",
+    "torch>=2.5",
     "tqdm>=4.67.1",
 ]
 
@@ -28,6 +32,16 @@ userdiffusion = "userdiffusion:main"
 [tool.uv]
 index-strategy = "unsafe-best-match"
 link-mode = "symlink"
+
+[tool.uv.sources]
+torch = [
+    { index = "pytorch" },
+]
+
+[[tool.uv.index]]
+name = "pytorch"
+url = "https://download.pytorch.org/whl/cpu"
+explicit = true
 
 [build-system]
 requires = ["hatchling"]
